# megalodon-enwik8-jax

./: .gitignore  .gitmodules  README.md  RESULTS.md  inference.py  pyproject.toml  train.py
configs/: llama_512.yaml  megalodon_multichunk_512.yaml  test.yaml
data/: README.md
scripts/: download_enwik8.py
src/megalodon_enwik8_jax/: __init__.py  checkpoint.py  cli.py  config.py  data.py  generate.py  logging.py  losses.py  optim.py  params.py  sampling.py  train_state.py  training.py  utils.py
src/megalodon_enwik8_jax/cli/: __init__.py
src/megalodon_enwik8_jax/models/: __init__.py  llama.py  megalodon.py
tests/: __init__.py  conftest.py  test_data.py  test_generate.py  test_gpu_smoke.py  test_models.py  test_training_smoke.py
